--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>About Me</title>
 </head>
 <body>
-    
+    <h1>Sophie C.</h1>
+    <img src=".\images\compass.jpg" >
+    <h3>Projects Done</h3>
+    <li>
+        <ul>Project 1 <a href="google.com"></ul>
+        <ul>Project 2 <a href="google.com"></ul>
+        <ul>Project 3 <a href="google.com"></ul>
+    </li>
 </body>
 </html>
