--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <h1>Sophie C.</h1>
-    <img src=".\images\compass.jpg" >
+    <img src=".\images\compass.jpg" alt="A picture of who I be :)" width="500" height="600">
     <h3>Projects Done</h3>
     <li>
         <ul>Project 1 <a href="google.com"></ul>
         <ul>Project 2 <a href="google.com"></ul>
         <ul>Project 3 <a href="google.com"></ul>
+    </li>
+    <h3>About Me</h3>
+    <li>
+        <ul>Education: </ul>
+        <ul>Education: </ul>
+        <ul>Education: </ul>
     </li>
 </body>
 </html>
