Add the projects section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
     <h1>Sophie C.</h1>
     <img src=".\images\compass.jpg" alt="A picture of who I be :)" width="500" height="600">
     <h3>Projects Done</h3>
-    <li>
-        <ul>Project 1 <a href="google.com"></ul>
-        <ul>Project 2 <a href="google.com"></ul>
-        <ul>Project 3 <a href="google.com"></ul>
-    </li>
+    <div class="projects">
+        <div class="project">
+          <h3><a href="https://github.com/totalSophie/Rock-Paper-Scissors.git">Rock Paper Scissors</a></h3>
+          <p>A simple implementation of grade-school classic “rock paper scissors”.</p>
+          <p>Languages used: HTML,CSS,JS</p>
+        </div>
+        <div class="project">
+          <h3><a href="https://github.com/totalSophie/Plant-App-Flutter-UI.git">Flutter Plant App</a></h3>
+          <p>A plant app UI using flutter</p>
+          <p>Languages used: Python,Pandas</p>
+        </div>
+        
+      </div>
     <h3>About Me</h3>
     <li>
         <ul>Education: </ul>
