Add styling to the image

--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Sophie C.</h1>
-    <img src=".\images\compass.jpg" alt="A picture of who I be :)" width="500" height="600">
+    <img src=".\images\compass.jpg" alt="A picture of who I be :)">
     <h3>Projects Done</h3>
     <div class="projects">
-        <div class="project">
-          <h3><a href="https://github.com/totalSophie/Rock-Paper-Scissors.git">Rock Paper Scissors</a></h3>
-          <p>A simple implementation of grade-school classic “rock paper scissors”.</p>
-          <p>Languages used: HTML,CSS,JS</p>
-        </div>
-        <div class="project">
-          <h3><a href="https://github.com/totalSophie/Plant-App-Flutter-UI.git">Flutter Plant App</a></h3>
-          <p>A plant app UI using flutter</p>
-          <p>Languages used: Python,Pandas</p>
-        </div>
-        
+        <ol>
+            <li>
+                <div class="project">
+                <h3><a href="https://github.com/totalSophie/Rock-Paper-Scissors.git">Rock Paper Scissors</a></h3>
+                <p>A simple implementation of grade-school classic “rock paper scissors”.</p>
+                <p>Languages used: HTML,CSS,JS</p>
+                </div>
+            </li>
+            <li>
+                <div class="project">
+                <h3><a href="https://github.com/totalSophie/Plant-App-Flutter-UI.git">Flutter Plant App</a></h3>
+                <p>A plant app UI using flutter</p>
+                <p>Languages used: Python,Pandas</p>
+                </div> 
+            </li>   
+        </ol>    
       </div>
+    
     <h3>About Me</h3>
-    <li>
-        <ul>Education: </ul>
-        <ul>Education: </ul>
-        <ul>Education: </ul>
-    </li>
+    <ul>
+        <li><strong>Education:</strong> University of Nairobi, Electrical and Electronics Engineering</li>
+        <li><strong>Work: </strong> MLOps Engineer</li>
+        <li><strong>Aspirations:</strong> Music Producer and Events Planner on the side :) </li>
+    </ul>
 </body>
 </html>
