Change the font of the name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Sophie C.</h1>
+    <h1 id="name">Sophie C.</h1>
     <img src=".\images\compass.jpg" alt="A picture of who I be :)">
     <h2>Projects Done</h2>
     <div class="projects">
@@ -30,7 +30,7 @@
         </ol>    
       </div>
     
-    <h3>About Me</h3>
+    <h2>About Me</h2>
     <ul>
         <li><strong>Education:</strong> University of Nairobi, Electrical and Electronics Engineering</li>
         <li><strong>Work: </strong> MLOps Engineer</li>
