Add more parts of About Me

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     
     <h2>About Me</h2>
     <ul>
+        <p><em>I consider myself an explorer, thus the choice of image :) </em></p>
         <li><strong>Education:</strong> University of Nairobi, Electrical and Electronics Engineering</li>
         <li><strong>Work: </strong> MLOps Engineer</li>
         <li><strong>Aspirations:</strong> Music Producer and Events Planner on the side :) </li>
+        <li><strong>Why Moringa:</strong>I am in Moringa School so that I can be a better Software Developer.</li>
     </ul>
 </body>
 </html>
